# SankeAI

./: CMakeLists.txt  button.cc  button.h  evolution_graph.cc  evolution_graph.h  food.cc  food.h  gfx.cc  gfx.h  globals.h  main.cc  matrix.cc  matrix.h  neural_net.cc  neural_net.h  population.cc  population.h  qlearn.cc  qlearn.h  snake.cc  snake.h  snake_ai.cc  snake_ai.h  snake_q_ai.cc  snake_q_ai.h
